--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,11 @@ dependencies {
 	implementation 'org.springframework:spring-web:6.1.10'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.cloud:spring-cloud-starter-feign:1.4.7.RELEASE'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'
+	implementation 'org.springframework.plugin:spring-plugin-core:3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.1'
 	compileOnly 'org.projectlombok:lombok'
+	compileOnly 'javax.servlet:servlet-api:2.5'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
